--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,9 @@
     font-family: 'Nanum Myeongjo';
   }
   body, html {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
+    min-height: -webkit-fill-available;
   }
